--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -22,16 +22,16 @@
                             <img src="/uploads/landingPage/car.png" style="height: 80%; display: block; margin-left: auto; margin-right: auto;">
                             <div class="indexBtnHolder" style="align-items: center;">
                                 <a class="btn btn-primary indexButtons" href="/customerSignup/" style="background-color: #469cff;"  role="button">Sign Up</a>
-                                <a class="btn btn-success indexButtons" href="/:customerFirstName/:customerLastName/customerProfile" style="background-color: #13b739;" role="button">Login</a>
+                                <a class="btn btn-success indexButtons" href="/loginCustomer" style="background-color: #13b739;" role="button">Login</a>
                             </div>
                         </div>
                         <div style="float: left; width: 50%; height: 30%; padding: 2% 2% 2% 2%; align-items: center;">
                             <!--Icon made by Freepik from www.flaticon.com-->
                             <h5 style="text-align:  center;">Restaurant Owner</h5>
-                            <img src="/uploads/landingPage/chef.png" style="height: 75%; display: block; margin-left: auto; margin-right: auto;">
+                            <img src="/uploads/landingPage/chef.png" style="height: 80%; display: block; margin-left: auto; margin-right: auto;">
                             <div class="indexBtnHolder" style="align-items: center;">
                                 <a class="btn btn-primary indexButtons" href="/restaurantSignup/" style="background-color: #469cff;" role="button">Sign Up</a>
-                                <a class="btn btn-success indexButtons" href="/:restaurant/restuarantProfile" style="background-color: #13b739;"  role="button">Login</a>
+                                <a class="btn btn-success indexButtons" href="/loginRestaurant" style="background-color: #13b739;"  role="button">Login</a>
                             </div>  
                         </div>
                     </div>
