--- a/views/loginC.ejs
+++ b/views/loginC.ejs
@@ -23,6 +23,7 @@
       </style>
    </head>
    <body>
+      <%- include('./partials/navbar.ejs') %>
       <div class="container">
             <div class="col-lrg-3">
             <div class="d-flex flex-column justify-content-center" id="ui">
