--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -46,7 +46,7 @@
                         <div class="restaurantInfo restaurantInfoTitle"> Restaurant Owner </div>
                         <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.title %> <%= restaurant.ownerFirstName %> <%= restaurant.ownerLastName %></div>
                         <br>
-                        <% if(user._id == restaurant._id) { %>
+                        <% if(user && user._id == restaurant._id) { %>
                         <a class="btn btn-outline-primary btn-sm" href="/restaurantSignup/" role="button">Edit Profile</a>
                         <% } %>
                         <a class="btn btn-outline-primary btn-sm" href="/<%=restaurant._id%>/reviews?p=1" role="button">Reviews</a>
