--- a/views/Partials/navbar.ejs
+++ b/views/Partials/navbar.ejs
@@ -16,7 +16,8 @@
           <a class="nav-link <%=cart?"":"disabled"%>" href="/myCart"><%=cart?cart.cartItems.length:0%> item(s) in Cart <%=cart?"["+cart.restaurant+"]":""%><span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <ul class="navbar-nav mr-auto" style="float:right; margin-left: 9%;">
+      <ul class="navbar-nav" style="float:right; margin-left: 9%;">
+        <% if (!user) { %>
         <li class="nav-item dropdown">
           <a style="color: white" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Login
@@ -35,6 +36,11 @@
             <a class="dropdown-item" href="/restaurantSignup/">Restaurant Owner</a>
           </div>
         </li>
+        <% } else { %>
+        <li class="nav-item active">
+          <a class="nav-link" href="/logout">Sign Out</a>
+        </li>
+        <% } %>
       </ul>
       <form action="/searchRestaurants/" method="POST" style="width:43%; float: right;" class="form-inline my-2 my-lg-0">
         <input id="searchBar" name="searchContent" required="required" style="width:45% ; float: left;" class="form-control mr-sm-2" type="search" placeholder="What Are You Craving?" aria-label="Search">
