added views to be used in heroku

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -9,7 +9,7 @@
     </head>
 
     <body style="overflow-x:hidden">
-        <%- include('../views/partials/navbar') %>
+        <%- include('./partials/navbar') %>
         <div>
             <div style="float:left; width: 50%; height: 73%; padding: 8% 2% 2% 2%">
                     <h1 class="display-4" style="text-align: center;">Scarborough Dining</h1>
