--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -44,7 +44,7 @@
             </div>
         <% } %>
 
-            <%- include('./partials/navbar.ejs') %>
+            <%- include('./views/partials/navbar.ejs') %>
             <div style="padding-left: 2%; padding-right: 2%;">
                 <br>
                 <br>
