--- a/views/customerProfile.ejs
+++ b/views/customerProfile.ejs
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="/stylesheets/profilePage.css">
    </head>
    <body>
+      <%- include('./partials/navbar.ejs') %>
       <div class="jumbotron ">
       <h1 class="display-10 text-center"><%= customerInfo.customerFirstName%> Profile </h1>
       <div class = "container d-flex flex-column justify-content-start">
