fixed accessing the restaurant's number of ratings in the restaurants profile page

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,25 +5,26 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul style="width: 30%" class="navbar-nav mr-auto">
+      <ul style="width: 30%" class="nav navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="<%=user?"/"+user._id+(user.ownerEmail?"/restaurantProfile":"/customerProfile"):""%>">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/explore/">Explore <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item <%=cart?"active btn-secondary":""%>">
-          <a class="nav-link <%=cart?"":"disabled"%></a>" href="/myCart"><%=cart?cart.cartItems.length:0%> item(s) in Cart <%=cart?"["+cart.restaurant+"]":""%><span class="sr-only">(current)</span></a>
+          <a class="nav-link <%=cart?"":"disabled"%>" href="/myCart"><%=cart?cart.cartItems.length:0%> item(s) in Cart <%=cart?"["+cart.restaurant+"]":""%><span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <ul class="navbar-nav mr-auto" style="float:right; margin-left: 9%;">
+      <ul class="nav navbar-nav navbar-right">
+        <% if (!user) { %>
         <li class="nav-item dropdown">
           <a style="color: white" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Login
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/customerSignup/">Customer</a>
-            <a class="dropdown-item" href="#">Restaurant Owner</a>
+            <a class="dropdown-item" href="/loginCustomer">Customer</a>
+            <a class="dropdown-item" href="/loginRestaurant">Restaurant Owner</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -35,6 +36,16 @@
             <a class="dropdown-item" href="/restaurantSignup/">Restaurant Owner</a>
           </div>
         </li>
+        <% } else { %>
+        <li class="nav-item active dropdown">
+            <a style="color: white" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Signed in as <%=user.nameSpaced?user.nameSpaced+" (Restaurant)":user.customerFirstName+" "+user.customerLastName+" (Customer)"%>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="/logout">Sign Out</a>
+            </div>
+        </li>
+        <% } %>
       </ul>
       <form action="/searchRestaurants/" method="POST" style="width:43%; float: right;" class="form-inline my-2 my-lg-0">
         <input id="searchBar" name="searchContent" required="required" style="width:45% ; float: left;" class="form-control mr-sm-2" type="search" placeholder="What Are You Craving?" aria-label="Search">
