--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -16,10 +16,10 @@
             <br><br>
             <h1 class="display-10 text-center" style="margin-bottom: 1%;"> <%= restaurant.nameSpaced %> </h1>
             <h4 class="display-10 text-center" style="margin-bottom: 3%; font-weight: 350;"> 
-                <% if (restaurant.rating == 0) { %>
+                <% if (restaurant.reviews.length === 0) { %>
                     No Ratings Yet
                 <% } else { %> 
-                    Rating: <%= restaurant.rating %>/5 (<%= restaurant.numOfRatings %> Reviews)
+                    Rating: <%= restaurant.rating %>/5 (<%= restaurant.reviews.length %> Reviews)
                 <% } %>
                 &nbsp;&nbsp;|&nbsp;&nbsp;  Pricing: <%= restaurant.pricing %>/4
                 <% if (!user) { %>
@@ -46,7 +46,7 @@
                         <div class="restaurantInfo restaurantInfoTitle"> Restaurant Owner </div>
                         <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.title %> <%= restaurant.ownerFirstName %> <%= restaurant.ownerLastName %></div>
                         <br>
-                        <% if(user._id == restaurant._id) { %>
+                        <% if(user && user._id == restaurant._id) { %>
                         <a class="btn btn-outline-primary btn-sm" href="/restaurantSignup/" role="button">Edit Profile</a>
                         <% } %>
                         <a class="btn btn-outline-primary btn-sm" href="/<%=restaurant._id%>/reviews?p=1" role="button">Reviews</a>
