Removed hardcoded user for reviews

--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -61,6 +61,7 @@
                 </div>
 
                 <div id="review-comment-div" class="text-center">
+                    <input type="hidden" id="user-id" name="doNotUse" value="<%=user._id%>">
                     <textarea id="review-text" class="text-left p-2" required></textarea>
                     <div class="text-right" id="review-text-submit-div"><a id="review-text-submit-btn" class="btn btn-outline-primary btn-md" role="button">Submit Review</a></div>
                 </div>
