--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -27,7 +27,7 @@
                 <a class="btn btn-outline-primary disabled" href="/<%=restaurant._id%>/menu?p=1" role="button">Order Now</a>
                 <% } else if(user.customerEmail) { %>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-                <a class="btn btn-outline-primary" href="/<%=restaurant._id%>/menu?p=1" role="button">Order Now></a>
+                <a class="btn btn-outline-primary" href="/<%=restaurant._id%>/menu?p=1" role="button">Order Now</a>
                 <% } else if(user._id == restaurant._id) { %>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
                 <a class="btn btn-outline-primary" href="/<%=restaurant._id%>/menu?p=1" role="button">Edit Menu</a>
@@ -37,9 +37,7 @@
             </h4>
             <div class =" d-flex flex-row align-items-start justify-content-around ">
                 <div class="card" style="width: 18rem;">
-                    <object style="width: 100%" data="/uploads/default/restaurantPhoto<%= restaurant.pricing%>.png" type="image/png">
-                        <img class="card-img-top" src="data:image/<%=restaurant.image.contentType%>;base64, <%=restaurant.image.data?restaurant.image.data.toString('base64'):""%>" alt="Card image cap" style="height:8em; object-fit: cover;">
-                    </object>
+                    <img class="card-img-top" src="data:image/<%=restaurant.image.contentType%>;base64, <%=restaurant.image.data?restaurant.image.data.toString('base64'):""%>" alt="Card image cap" style="height:8em; object-fit: cover;">
                     <div class="card-body">
                         <div class="restaurantInfo restaurantInfoTitle">Phone Number</div>
                         <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.phoneNumber %></div>
